fix squish for real

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -267,6 +267,9 @@ textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {
         left: 5px;
         /*width: 440px;*/
     }
+    .container .hero-headline {
+        margin-top: 120px;
+    }
     /*.container .hammers img {
         width: 210px;
         margin: 20px 20px;
